# Web_foundation_6.1

./: exercise_1.html  exercise_2.py  pyproject.toml
